--- a/Assignment_2_CSS_layoutDesign/Assignment_2_CSS_layoutDesign/02_HTML_Proposal_Doc/css/style.css
+++ b/Assignment_2_CSS_layoutDesign/Assignment_2_CSS_layoutDesign/02_HTML_Proposal_Doc/css/style.css
@@ -1,33 +1,115 @@
 
 
 body {
-background-color: #fef2c2;   
-color:#302005;
+  background-color: #fef2c2;
+  font-family: Arial, Helvetica, sans-serif;
+  color:#302005;
+  width: 65%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
 }
 
+h1{
+  text-align: center;
+  background-color: rgb(245, 199, 138);
+}
+
+header{
+  padding: 10px;
+  margin-top: 80px;
+  background-color: rgb(245, 199, 138);
+}
+#headerBackground{
+  padding: 20px;
+  background-color: white;
+}
+header div p{
+  width: 80%;
+  margin: 40px auto;
+}
+
+nav{
+  width: 512px;
+  float: left;
+  padding: 10px 10px;
+  margin-left: 50px;
+  margin-top: 40px;
+  background-color: rgb(245, 199, 138);
+}
+nav h2{
+  text-align: center;
+}
+nav ul{
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: white;
+}
+nav ul li{
+  padding: 5px 5px;
+}
+
+.sectionHead{
+  padding: 5px 20px;
+  text-align: center;
+  margin-bottom: 0;
+  background-color: rgb(245, 199, 138);
+}
+.sectionBody{
+  padding: 5px 20px;
+  margin-top: 0;
+  background-color: white;
+}
+
+footer{
+  margin-bottom: 80px;
+}
+footer dl{
+  padding: 20px 20px;
+  margin-top: 0;
+  background-color: white;
+}
+footer dl dt{
+  margin-top: 10px;
+}
+footer dl dd{
+  margin-top: 10px;
+}
+
+.button{
+  padding: 20px 20px;
+  background-color: #302005;
+  text-decoration: none;
+  color: white;
+}
+.button:hover{
+  background-color: black;
+}
 
 img {
-width: 512px;
-display: block;
-margin-left: auto;
-margin-right: auto;
+  width: 512px;
+  display: block;
+  padding: 2px;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
 table {
-border:0.5px solid black;
-background-color: #eeffee;
-margin-left: auto;
-margin-right: auto;
+  border:0.5px solid black;
+  background-color: #eeffee;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 th, td {
-border:0.5px solid black;
+  border:0.5px solid black;
 }
 
 
 figcaption {
-    font-style: italic;
-    padding: 2px;
-    text-align: center;
-  }
+  font-style: italic;
+  padding: 2px;
+  text-align: center;
+}
